# i3-window-killer

./: .gitignore  Cargo.toml  README.md  config.rasi  template.rasi
src/: cli.rs  lib.rs  main.rs  utils.rs
