[package]
name = "i3-window-killer"
version = "0.2.0"
authors = ["beurre <zidronfirefax@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
i3ipc = { version = "0.10.1", features = ["i3-gaps"], path = "/home/beurre/Dev/rust/.cloned/i3ipc-rs" }
ignore = "0.4.18"
regex = "1.5.4"
clap = { version = "2.33.3", default-features = false }
tinytemplate = "1.2.1"