[package]
name = "i3-window-killer"
version = "0.3.1"
authors = ["beurre <zidronfirefax@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
i3ipc = { version = "0.11.0", features = ["i3-gaps", "i3-4-20"], git = "https://github.com/mouchabeurre/i3ipc-rs.git", branch = "master" }
ignore = "0.4.18"
regex = "1.5.4"
fuzzy-matcher = "0.3.7"
clap = { version = "2.33.3", default-features = false }
tinytemplate = "1.2.1"
