[package]
name = "i3-window-killer"
version = "0.3.3"
authors = ["beurre <zidronfirefax@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
i3_ipc = { git = "https://github.com/mouchabeurre/tokio-i3ipc", rev = "4077a49" }
ignore = "0.4.18"
regex = "1.5.4"
fuzzy-matcher = "0.3.7"
clap = { version = "2.33.3", default-features = false }
tinytemplate = "1.2.1"
